# NurseScheduler

./: .action.yml  .cproject  .dockerignore  .gitattributes  .gitignore  .gitignore~  .gitmodules  .project  .travis.yml  AFAIRE.txt  CMakeDefinitionsLists.txt  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER.md  Docker.md  Dockerfile  DockerfileValgrind  INSTALL.md  INSTALL.sh  LICENSE  Makefile  MyTools.cpp  MyTools.h  Nurse.h  README.md  README_BCP.md  README_BOOST.md  README_BOOST.md~  README_COIN.md  README_Pricer.md  README_SCIP.md  README_SCIP.md~  ReadWrite.h  Scenario.h  action.yml  docker-compose.yml  docker-entrypoint.sh  generateScript.sh  main.cpp  (+17 more)
BCPDocker/: Dockerfile  INSTALL.sh  README.md
CMakeDocker/: Dockerfile  README.md
bashfiles/: cleanOutfiles.sh  runDir.sh  submitAllSungrid.sh  testSeedBourrin.sh  testSeedBourrinAL.sh  writeAllSimulators.sh  writeAllSimulatorsFinalRun.sh  writeSimulator.sh  writeSimulatorFinalRun.sh  writeSimulatorFinalRunAL.sh  writeSimulatorWithRandomSeeds.sh  writeSimulatorWithRandomSeedsAL.sh
benchmark/: branching.yml  d_w4.yml  d_w8.yml  inrc.yml  nrp.yml  root.yml  root2.yml  root_default_domination.yml  w4.yml  w8.yml
lib_julia_nurse/: CMakeLists.txt  README.md  data.cpp  data.h  parsers.cpp  parsers.h  solver.cpp  solver.h  tools.cpp  tools.h  x86_64.cmake
main/: CMakeLists.txt  DeterministicMain.cpp  DynamicMain.cpp  INRCMain.cpp  PricerMain.cpp
outfiles/: Validator-results.txt  log.out  solution.out  test.out
paramfiles/: all_rotation.txt  default.txt  default_noShort.txt  heuristic_mip.txt  lns_feas.txt  lns_repeat.txt  lns_rolling_1week.txt  lns_rolling_2weeks.txt  lns_rolling_3weeks.txt  lns_rolling_4weeks.txt  lns_rolling_5weeks.txt  lns_rolling_6weeks.txt  lns_rolling_7weeks.txt  lns_rolling_8weeks.txt  lns_rolling_cplex.txt  lns_rolling_destroy32weeks.txt  lns_rolling_destroy48weeks.txt  lns_rolling_destroy64weeks.txt  (+18 more)
src/: .clang_complete  BcpModeler.cpp  BcpModeler.h  CMakeLists.txt  CbcModeler.cpp  CbcModeler.h  CoinModeler.h  Demand.cpp  Demand.h  DemandGenerator.cpp  DemandGenerator.h  DeterministicMain.cpp  DeterministicMain_test.cpp  DeterministicMain_test.h  DeterministicSolver.cpp  DeterministicSolver.h  DynamicMain.cpp  GlobalStats.cpp  GlobalStats.h  Greedy.cpp  Greedy.h  InitializeInstance.cpp  InitializeInstance.h  InitializeSolver.cpp  InitializeSolver.h  InputPaths.cpp  InputPaths.h  Makefile  Makefile~  MasterProblem.cpp  MasterProblem.h  Modeler.h  MyTools.cpp  MyTools.h  Nurse.cpp  Nurse.h  OptimalSolver.cpp  Parameters.cpp  Parameters.h  ParseArguments.cpp  (+33 more)
src/data/: CMakeLists.txt  Day.cpp  Day.h  Demand.cpp  Demand.h  Nurse.cpp  Nurse.h  Roster.cpp  Roster.h  Scenario.cpp  Scenario.h  Shift.cpp  Shift.h
src/parsing/: CMakeLists.txt  ParseINRC.cpp  ParseINRC.h  ParseINRC2.cpp  ParseINRC2.h  ParseNRP.cpp  ParseNRP.h  ParseUI.cpp  ParseUI.h
src/solvers/: CMakeLists.txt  DeterministicSolver.cpp  DeterministicSolver.h  DynamicWeights.cpp  DynamicWeights.h  Greedy.cpp  Greedy.h  InitializeSolver.cpp  InitializeSolver.h  MasterProblem.cpp  MasterProblem.h  Solver.cpp  Solver.h  SolverInput.h  StochasticSolver.cpp  StochasticSolver.h
src/solvers/mp/: CMakeLists.txt  MasterProblem.cpp  MasterProblem.h  RCPricer.cpp  RCPricer.h  RosterMP.cpp  RosterMP.h  RotationMP.cpp  RotationMP.h  RotationPricer.cpp  RotationPricer.h  SubProblem.cpp  SubProblem.h  TreeManager.cpp  TreeManager.h
src/solvers/mp/constraints/: AssignmentConstraints.cpp  AssignmentConstraints.h  CMakeLists.txt  ConstraintsMP.cpp  ConstraintsMP.h  DynamicConstraints.cpp  DynamicConstraints.h  ResourceConstraints.cpp  ResourceConstraints.h
src/solvers/mp/graph/: CMakeLists.txt  RCGraph.cpp  RCGraph.h
src/solvers/mp/modeler/: BcpBranchingCandidates.cpp  BcpBranchingCandidates.h  BcpHeuristics.cpp  BcpHeuristics.h  BcpModeler.cpp  BcpModeler.h  CMakeLists.txt  CbcModeler.cpp  CbcModeler.h  CoinModeler.cpp  CoinModeler.h  Modeler.cpp  Modeler.h  Stabilization.cpp  Stabilization.h
src/solvers/mp/rcspp/: CMakeLists.txt  PriceLabelGraph.cpp  PriceLabelGraph.h  PriceLabelsGraph.cpp  PriceLabelsGraph.h  PrincipalGraph.cpp  PrincipalGraph.h  RCGraph.cpp  RCGraph.h  RosterSP.cpp  RosterSP.h  ShortSP.cpp  ShortSP.h  SubProblem.cpp  SubProblem.h  SubProblemShort.cpp  SubProblemShort.h
src/solvers/mp/sp/: BoostRosterSP.cpp  BoostRosterSP.h  BoostRotationSP.cpp  BoostRotationSP.h  CMakeLists.txt  CyclicRosterSP.cpp  CyclicRosterSP.h  LongRotationSP.cpp  LongRotationSP.h  MyRosterSP.cpp  MyRosterSP.h  RCSPPSubProblem.cpp  RCSPPSubProblem.h  RosterSP.cpp  RosterSP.h  RotationSP.cpp  RotationSP.h  SubProblem.cpp  SubProblem.h
src/solvers/mp/sp/rcspp/: BoostRCSPP.cpp  BoostRCSPP.h  CMakeLists.txt  MyRCGraph.cpp  MyRCGraph.h  MyRCLabel.cpp  MyRCLabel.h  MyRCSPP.cpp  MyRCSPP.h  PriceLabelGraph.cpp  PriceLabelGraph.h  PrincipalGraph.cpp  PrincipalGraph.h  RCGraph.cpp  RCGraph.h  RCLabel.cpp  RCLabel.h  RCSPP.cpp  RCSPP.h
src/solvers/mp/sp/rcspp/boost/: CMakeLists.txt  LongRotationSP.cpp  LongRotationSP.h  PrincipalGraph.cpp  PrincipalGraph.h  RCGraph.cpp  RCGraph.h  RCSPP.cpp  RCSPP.h  RosterSP.cpp  RosterSP.h  RotationSP.cpp  RotationSP.h  SubProblem.cpp  SubProblem.h
src/solvers/mp/sp/rcspp/resources/: AlternativeShiftResource.cpp  AlternativeShiftResource.h  CMakeLists.txt  ConsShiftResource.cpp  ConsShiftResource.h  ConsWeekendShiftResource.cpp  ConsWeekendShiftResource.h  ForbiddenPatternResource.cpp  ForbiddenPatternResource.h  FreeDaysAfterShiftResource.cpp  FreeDaysAfterShiftResource.h  IdentWeekendResource.cpp  IdentWeekendResource.h  PreferenceResource.cpp  PreferenceResource.h  TotalShiftDurationResource.cpp  TotalShiftDurationResource.h  TotalShiftResource.cpp  TotalShiftResource.h  TotalWeekendsResource.cpp  TotalWeekendsResource.h  UnwantedShiftResource.cpp  UnwantedShiftResource.h
src/tools/: CMakeLists.txt  DemandGenerator.cpp  DemandGenerator.h  GlobalStats.cpp  GlobalStats.h  InputPaths.cpp  InputPaths.h  MyTools.cpp  MyTools.h  ReadWrite.cpp  ReadWrite.h  Tools.cpp  Tools.h  parseToolsUI.cpp  parseToolsUI.h
(+32712 files in other folders)
